# redis-cache-engine

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: cache_store.cpp  cache_store.h  consistent_hash.cpp  consistent_hash.h  eviction_policy.cpp  eviction_policy.h
src/network/: protocol.cpp  protocol.h  server.cpp  server.h
